[package]
name = "sim_epidemic_linux"
version = "0.1.0"
authors = ["mskmysht <m.mysht118@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peg = "0.8.0"
rand = { version = "0.8", features = ["alloc"] }
rand_distr = "0.4"
rayon = "1.5"
csv ="1.1"
chrono = "0.4"
custom_macro = { path = "./custom_macro" }
