[workspace]

members = [
  "world",
  "worker",
  "controller",
  "cert-gen",
  "libs/enum_map_derive",
  "libs/enum_map",
  "libs/api",
  "libs/world-if",
  "libs/worker-if",
  "libs/protocol",
  "libs/file-io",
  "libs/quic-config",
  "libs/repl",
  "libs/table",
  "libs/controller-if",
]

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = "1.26"
tokio-util = "0.7"
serde = "1.0"
quinn = "0.9"
rustls = "0.20"
anyhow = "1.0"
ipc-channel = "0.16"
parking_lot = "0.12"
thiserror = "1.0"
bincode = "1.3"
