[workspace]

members = [
  "world",
  "core/world-core",
  "shared/world-if",
  "worker",
  "shared/worker-if",
  "controller",
  "shared/api",
  "shared/scenario-operation",
  "cert-gen",
  "world-repl",
  "libs/predicate",
  "libs/enum_map_derive",
  "libs/enum_map",
  "libs/protocol",
  "libs/file-io",
  "libs/repl",
  "libs/table",
]

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = "1.26"
tokio-util = "0.7"
serde = "1.0"
serde_json = "1.0"
quinn = "0.9.3"
rustls = "0.20"
anyhow = "1.0"
ipc-channel = "0.16"
parking_lot = "0.12"
thiserror = "1.0"
bincode = "1.3"
arrow2 = "0.17"
table = { path = "libs/table" }
world-core = { path = "core/world-core" }
world-if = { path = "shared/world-if" }
worker-if = { path = "shared/worker-if" }
api = { path = "shared/api" }
repl = { path = "libs/repl" }
predicate = { path = "libs/predicate" }
scenario-operation = { path = "shared/scenario-operation" }
