[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21", features = ["full"] }
poem = "1"
poem-openapi = { version = "2", features = ["rapidoc"] }
parking_lot = "0.12"
ulid = "1"
batch = { path = "../libs/batch" }
