[package]
name = "container"
version = "0.1.0"
authors = ["mskmysht <m.mysht118@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
container-if = {path = "../container-if"}
world-if = {path = "../world-if"}
protocol = {path = "../protocol"}
ipc-channel = "0.16"
pico-args = "0.5"
rand = {version = "0.8", features = ["alloc"]}
rand_distr = "0.4"
serde = {version = "1.0", features = ["derive"]}
parking_lot = "0.12"