[package]
name = "controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
worker-if = { path = "../libs/worker-if" }
protocol = { path = "../libs/protocol" }
world-if = { path = "../libs/world-if" }
quic-config = { path = "../libs/quic-config" }
repl = { path = "../libs/repl" }
api = { path = "../libs/api" }
async-trait = "0.1"
clap = { version = "4.1", features = ["derive"] }
quinn = "0.9"
rustls = "0.20"
tokio = { version = "1.25", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
async-channel = "1.8"
futures-util = "0.3"
parking_lot = "0.12"
poem = "1"
poem-openapi = { version = "2", features = ["rapidoc"] }
ulid = "1"
thiserror = "1.0"
anyhow = "1.0"
bincode = "1.3"
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
postgres-types = { version = "0.2", features = ["derive"] }
uuid = "1.3"
