[package]
name = "controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
worker-if = { path = "../libs/worker-if" }
protocol = { path = "../libs/protocol" }
world-if = { path = "../libs/world-if" }
quic-config = { path = "../libs/quic-config" }
repl = { path = "../libs/repl" }
api = { path = "../libs/api" }
async-trait = "0.1"
clap = { version = "4.1", features = ["derive"] }
quinn = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
futures-util = "0.3"
parking_lot = { workspace = true }
poem = "1"
poem-openapi = { version = "2", features = ["rapidoc"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
bincode = { workspace = true }
tokio-postgres = { version = "0.7", features = [
    "with-uuid-1",
    "with-serde_json-1",
] }
postgres-types = { version = "0.2", features = ["derive"] }
uuid = "1.3"
serde_json = "1.0"
toml = "0.7"
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
