[package]
name = "controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
worker-if = { workspace = true }
protocol = { path = "../libs/protocol" }
file-io = { path = "../libs/file-io" }
api = { workspace = true }
async-trait = "0.1"
clap = { version = "4.1", features = ["derive"] }
quinn = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
futures-util = "0.3"
parking_lot = { workspace = true }
poem = "1"
poem-openapi = { version = "2", features = ["rapidoc"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
bincode = { workspace = true }
tokio-postgres = { version = "0.7", features = [
    "with-uuid-1",
    "with-serde_json-1",
] }
postgres-types = { version = "0.2", features = ["derive"] }
uuid = "1.3"
toml = "0.7"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
