[package]
name = "worker"
version = "0.1.0"
authors = ["mskmysht <m.mysht118@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
worker-if = { path = "../libs/worker-if" }
protocol = { path = "../libs/protocol" }
quic-config = { path = "../libs/quic-config" }
controller-if = { path = "../libs/controller-if" }
repl = { path = "../libs/repl" }
ipc-channel = "0.16"
argopt = "0.3"
rand = { version = "0.8", features = ["alloc"] }
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
parking_lot = "0.12"
async-trait = "0.1"
tokio = { version = "1.25", features = ["full"] }
tokio-util = "0.7"
quinn = "0.9"
rustls = "0.20"
rcgen = "0.10"
futures-util = "0.3"
anyhow = "1.0"
thiserror = "1.0"
serde-error = "0.1"
shared_child = "1.0"
bincode = "1.3"
