[package]
name = "worker"
version = "0.1.0"
authors = ["mskmysht <m.mysht118@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
worker-if = { path = "../libs/worker-if" }
protocol = { path = "../libs/protocol" }
quic-config = { path = "../libs/quic-config" }
repl = { path = "../libs/repl" }
ipc-channel = { workspace = true }
clap = { version = "4.1", features = ["derive"] }
rand = { version = "0.8", features = ["alloc"] }
rand_distr = "0.4"
serde = { workspace = true, features = ["derive"] }
parking_lot = { workspace = true }
async-trait = "0.1"
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
rcgen = "0.10"
futures-util = "0.3"
anyhow = { workspace = true }
thiserror = { workspace = true }
serde-error = "0.1"
shared_child = "1.0"
bincode = { workspace = true }
arrow2 = { version = "0.16", features = [
    "io_ipc",
    "io_ipc_compression",
    "io_csv_write",
] }
toml = "0.7"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
