[package]
name = "world-repl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
world-core = { workspace = true }
world-if = { workspace = true }
repl = { workspace = true }
ipc-channel = { workspace = true }
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
clap = { version = "4.1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde-error = "0.1"
thiserror = { workspace = true }
nom = "7.1"
parser = { path = "../libs/parser" }
