[package]
name = "world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
table = { path = "../libs/table" }
custom_macro = { path = "../custom_macro" }
world-if = { path = "../libs/world-if" }
ipc-channel = "0.16"
argopt = "0.3"
rayon = "1.5"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.1"
rand = { version = "0.8", features = ["alloc"] }
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
parking_lot = "0.12"
repl = { path = "../libs/repl" }
protocol = { path = "../libs/protocol" }
thiserror = "1.0"
