[package]
name = "world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
table = { path = "../libs/table" }
enum_map = { path = "../libs/enum_map" }
world-if = { path = "../libs/world-if" }
repl = { path = "../libs/repl" }
protocol = { path = "../libs/protocol" }
ipc-channel = { workspace = true }
serde = { workspace = true, features = ["derive"] }
parking_lot = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rayon = "1.5"
strum = { version = "0.24", features = ["derive"] }
clap = { version = "4.1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
csv = "1.1"
arrow2 = { version = "0.16", features = ["io_ipc", "io_ipc_compression"] }
rand = { version = "0.8", features = ["alloc"] }
rand_distr = "0.4"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
