[package]
name = "world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
world-core = { workspace = true }
world-if = { workspace = true }
repl = { path = "../libs/repl" }
ipc-channel = { workspace = true }
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
clap = { version = "4.1", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
scenario-operation = { workspace = true }
