[package]
name = "enum_map_derive"
version = "0.1.0"
authors = ["Masaaki Miyashita <m.mysht118@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "enum_map_derive"
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
