[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peg = "0.8"
serde = { workspace = true }
bincode = { workspace = true }
quinn = { workspace = true }
bytes = "1.2"
tokio = { workspace = true }
anyhow = { workspace = true }
