[package]
name = "quic-config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
file-io = { path = "../file-io" }
quinn = { workspace = true }
rustls = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
