[package]
edition = "2021"
name = "worker-if"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0" }
nom = "7.1"
serde-error = "0.1"
thiserror = "1.0"
anyhow = "1.0"
world-if = { path = "../world-if" }
parser = { path = "../parser" }
