[package]
edition = "2021"
name = "world-if"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
ipc-channel = "0.16"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
nom = "7.1"
thiserror = "1.0"
serde-error = "0.1"
anyhow = "1.0"
parser = { path = "../parser" }
api = { path = "../api" }
