[package]
edition = "2021"
name = "worker-if"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { workspace = true }
anyhow = { workspace = true }
serde-error = "0.1"
serde = { workspace = true }
world-if = { workspace = true }
