[package]
edition = "2021"
name = "world-if"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
ipc-channel = { workspace = true }
serde = { workspace = true, features = ["derive"] }
bincode = { workspace = true }
thiserror = { workspace = true }
serde-error = "0.1"
anyhow = { workspace = true }
api = { workspace = true }
